resolve collapse bug on ios devices

--- a/src/components/collapse/collaps.css
+++ b/src/components/collapse/collaps.css
@@ -1,66 +1,61 @@
 .colllapse-card-wrapper {
-    padding: 20px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    width: 95%;
-    margin: auto;
-    margin-top: 30px;
-    border:1px solid #c6c6c6;
-    background-color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjust the values for the shadow effect */
+  padding: 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 95%;
+  margin: auto;
+  margin-top: 30px;
+  border: 1px solid #c6c6c6;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjust the values for the shadow effect */
 }
 
-.collapse-card-title{
+.collapse-card-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
- .collapse-card-title .heart-title{
+.collapse-card-title .heart-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap:15px
-
+  gap: 15px;
 }
- .collapse-card-title .heart-title .icon-wrap{
+.collapse-card-title .heart-title .icon-wrap {
   position: relative;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-size: 1.5rem;
-    line-height: 1;
-    border-radius: 50%;
-    overflow: hidden;
-    user-select: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(158, 14, 64);
-
- }
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-size: 1.5rem;
+  line-height: 1;
+  border-radius: 50%;
+  overflow: hidden;
+  user-select: none;
+  color: rgb(255, 255, 255);
+  background-color: rgb(158, 14, 64);
+}
 .collapse-card-title .icon-location {
-    font-size: 1.5rem;
-   color: var(--color-primary);
+  font-size: 1.5rem;
+  color: var(--color-primary);
 }
 
-
-
-.collaspe-card-picture{
+.collaspe-card-picture {
   height: 500px;
 }
-.collaspe-card-picture > img{
+.collaspe-card-picture > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
-
 
 .collapsible-card {
   border-radius: 8px;
@@ -73,22 +68,25 @@
   justify-content: center;
   align-items: center;
 }
- .collapse-arrow-down .c-a-d {
+.collapse-arrow-down .c-a-d {
   height: 40px;
   width: 40px;
   color: var(--color-red);
   margin-top: 20px;
- }
+}
 .content {
-  transition: height 0.4s ease;
+   transition: height 0.4s ease; 
   padding-bottom: 20px;
   padding-top: 0px;
-  overflow: hidden;
-   color: #333;
-  width: 95%;
+  color: #333;
+  max-width:  95%;
   margin: auto;
   margin-top: 20px;
   line-height: 26px;
   font-size: 14px;
   text-align: justify;
+  overflow: "hidden";
+  text-overflow: "ellipsis";
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
